* refactor formatted text transform to simplify how inner space is collapsed; verify only inner hard breaks are preserved
* allow relative font size for sub and sup to be set independently; support combined setting for backwards compatibility
* don't hyphenate autolink when hyphenation is enabled (#2521) (*@meonkeys*)

Bug Fixes::

* duplicate attributes on table when wrapping table in breakable or unbreakable container (#2520)
* correctly map all icons from FontAwesome 4 (#2373)
* resolve remote image in document title or section title with autogenerated ID
* keep caret between items in menu macro with previous item if items wrap
* don't include children of section with empty title in TOC
* don't include children of section with empty title in outline
* only load Treetop runtime so it does not overload `require` method
* fix collation order of index terms that differ only in case
* don't crash if page background image value is empty (interpret as "none")
* prevent special character substitution from interfering with callouts in plain verbatim block (#2390)
* remove deprecated, undocumented `svg-font-family` theme key (the correct key is `svg-fallback-font-family`)
* major improvement to OTF support following release of ttfunk 1.8.0 (automatic transitive dependency of prawn)

Compliance::

* lock version of rexml (pulled in by asciidoctor-diagram and prawn-svg) to fix incompatibility

== 2.3.15 (2024-03-12) - @mojavelinux

Improvements::

* drop links from entries in TOC (#2505)

Compliance::

* lock ttfunk to 1.7.x in the 2.3.x release line to avoid requiring Ruby headers (i.e., development libraries) to install gem (#2508)

=== Details

{url-repo}/releases/tag/v2.3.15[git tag] | {url-repo}/compare/v2.3.14\...v2.3.15[full diff]

== 2.3.14 (2024-03-08) - @mojavelinux

Improvements::

* upgrade prawn-svg to 0.34 to add support for SVG referenced by image tag (SVG in SVG)

Bug Fixes::
