@@ -40,6 +40,7 @@ Improvements::
 * refactor formatted text transform to simplify how inner space is collapsed; verify only inner hard breaks are preserved
 * allow relative font size for sub and sup to be set independently; support combined setting for backwards compatibility
 * don't hyphenate autolink when hyphenation is enabled (#2521) (*@meonkeys*)
+* add support for base64-encoded SVG image reference in SVG (#2512)
 
 Bug Fixes::
 
